# admin-api-mcp

./: .gitignore  CLAUDE.md  README.md  claude_desktop_config.json  install.sh  lucidlink_mcp_server.py  pyproject.toml  requirements.txt  test_installation.py
