[project]
name = "lucidlink-mcp-server"
version = "1.0.0"
description = "LucidLink MCP Server for Claude Desktop"
requires-python = ">=3.10"
dependencies = [
    "docker>=6.1.3",
    "requests>=2.31.0",
    "keyring>=24.2.0",
    "mcp>=0.1.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
lucidlink-mcp = "lucidlink_mcp_server:main"
